--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application>
+       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBi2zWrVyN-0nNscuTLdFWTOZOMrLTGluc"/>
+   </application>
 </manifest>
